lower warning image quality, create image pool and map for enemies and corresponding warning image, initialise warning image pool, display corresponding warning image for enemies in warning state and hide corresponding warning images for destroyed enemies